Revision history for Perl extension Text::FromAny.

0.20
	- Actually include test data (duh)
	- Fixed pdf reading
	- Added support for using pdftotext to read PDF files

0.11
	- Fixed tests not being able to locate their data in some cases

0.1
    - Initial release